WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
87693
[GStreamer] Video sink doesn't respect WebKit code style
https://bugs.webkit.org/show_bug.cgi?id=87693
Summary
[GStreamer] Video sink doesn't respect WebKit code style
Philippe Normand
Reported
2012-05-28 22:14:10 PDT
SSIA
Attachments
Patch
(25.13 KB, patch)
2012-05-28 22:16 PDT
,
Philippe Normand
menard
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2012-05-28 22:16:43 PDT
Created
attachment 144444
[details]
Patch
WebKit Review Bot
Comment 2
2012-05-28 22:20:15 PDT
Attachment 144444
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/platform/graphics/gstreamer/VideoSinkGStreamer.h:59: webkit_video_sink_get_type is incorrectly named. Don't use underscores in your identifier names. [readability/naming] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alexis Menard (darktears)
Comment 3
2012-05-29 04:11:59 PDT
Comment on
attachment 144444
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=144444&action=review
Other that the comment rs=me
> Source/WebCore/platform/graphics/gstreamer/VideoSinkGStreamer.cpp:42 > +static GstStaticPadTemplate sinkTemplate = GST_STATIC_PAD_TEMPLATE("sink", GST_PAD_SINK, GST_PAD_ALWAYS, GST_STATIC_CAPS(WEBKIT_VIDEO_SINK_PAD_CAPS));
The static variable should start with s_ isn't it?
Philippe Normand
Comment 4
2012-05-29 09:20:29 PDT
(In reply to
comment #3
)
> (From update of
attachment 144444
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=144444&action=review
> > Other that the comment rs=me > > > Source/WebCore/platform/graphics/gstreamer/VideoSinkGStreamer.cpp:42 > > +static GstStaticPadTemplate sinkTemplate = GST_STATIC_PAD_TEMPLATE("sink", GST_PAD_SINK, GST_PAD_ALWAYS, GST_STATIC_CAPS(WEBKIT_VIDEO_SINK_PAD_CAPS)); > > The static variable should start with s_ isn't it?
Ah yes indeed. Thanks for the review!
Philippe Normand
Comment 5
2012-05-29 09:28:07 PDT
Committed
r118789
: <
http://trac.webkit.org/changeset/118789
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug