[GStreamer] Video sink doesn't respect WebKit code style https://bugs.webkit.org/show_bug.cgi?id=87693

Reviewed by Alexis Menard.

No change in behavior of the sink, this patch only adapts the code
style to WebKit's.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
* platform/graphics/gstreamer/VideoSinkGStreamer.cpp:
(_WebKitVideoSinkPrivate):
(webkitVideoSinkTimeoutCallback):
(webkitVideoSinkRender):
(webkitVideoSinkDispose):
(unlockBufferMutex):
(webkitVideoSinkUnlock):
(webkitVideoSinkUnlockStop):
(webkitVideoSinkStop):
(webkitVideoSinkStart):
(webkitVideoSinkMarshalVoidAndMiniObject):
(webkit_video_sink_class_init):
(webkitVideoSinkNew):
* platform/graphics/gstreamer/VideoSinkGStreamer.h:
(_WebKitVideoSink):
(_WebKitVideoSinkClass):

Canonical link: https://commits.webkit.org/105530@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118789 268f45cc-cd09-0410-ab3c-d52691b4dbfc